--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="header__container">
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="Logo do site">
+            </div>
+            <nav>
+                <ul class="header__ul">
+                    <li class="header__li"><a href="#">Home</a></li>
+                    <li class="header__li"><a href="#">Sobre mim</a></li>
+                    <li class="header__li"><a href="#">Projeto-DSlist</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
+
