--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
         <div class="header__container">
-            <div class="logo">
-                <img src="assets/img/logo.png" alt="Logo do site">
-            </div>
-            <nav>
-                <ul class="header__ul">
-                    <li class="header__li"><a href="#">Home</a></li>
-                    <li class="header__li"><a href="#">Sobre mim</a></li>
-                    <li class="header__li"><a href="#">Projeto-DSlist</a></li>
+            <nav class="header__nav">
+                    <img src="assets/img/logo.png" alt="Logo do site" class="logo">
+                    <a href="#" class="header__a">Home</a>
+                    <a href="#" class="header__a">Sobre mim</a>
+                    <a href="#" class="header__a">Projeto-DSlist</a>
                 </ul>
             </nav>
         </div>
